<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO: Font, don't scroll entire page -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/sit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sit"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/welcome3Desc" />
        <TextView
            android:id="@+id/welcome3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textSize="18sp"
            android:text="@string/welcome3"
            android:layout_marginHorizontal="24dp"
            android:textColor="@color/medEmphasis" />
        <ImageView
            android:id="@+id/scroll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scroll3"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/scroll3" />

        <Button
            android:id="@+id/continueButton"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:textColor="@color/secondary"
            android:text="@string/cont"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            >
            <TextView
                android:id="@+id/login3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/login_prompt"
                android:textColor="@color/highEmphasis"
                />
            <TextView
                android:id="@+id/loginClick3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginHorizontal="4dp"
                android:text="@string/login_clickable"
                android:textColor="@color/primary"
                />
        </LinearLayout>
    </LinearLayout>
</layout>




