<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO: Font, don't scroll entire page -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/film"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/welcome2Desc" />
        <TextView
            android:id="@+id/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="18sp"
            android:text="@string/welcome2"
            android:textColor="@color/medEmphasis" />
        <ImageView
            android:id="@+id/scroll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scroll2"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/scroll2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            >
            <TextView
                android:id="@+id/login2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/login_prompt"
                android:textColor="@color/highEmphasis"
                />
            <TextView
                android:id="@+id/loginClick2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginHorizontal="4dp"
                android:text="@string/login_clickable"
                android:textColor="@color/primary"
                />
        </LinearLayout>

    </LinearLayout>
</layout>




